deployments/ytt/ingress.yaml
#@ load("@ytt:data", "data")
#@ load("_helpers.lib.yml", "labels")

---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.app
spec:
  selector: #@ labels()
  ports:
    - protocol: TCP
      port: #@ data.values.port
      targetPort: #@ data.values.port

#@ if hasattr(data.values, "ingress_hostname"):
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ data.values.app
spec:
  ingressClassName: nginx
  rules:
    - host: #@ data.values.ingress_hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: #@ data.values.app
                port:
                  number: #@ data.values.port
#@ end
